--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 						</div>
 					</div>
 				</div>
-				<div id="flyer_menu" class="flyer_menu">
-					<button id="flyer_prev" class="flyer_prev"></button>
-					<div id="flyer_menu_box" class="flyer_menu_box">
+				<div id="flyer_menu" class="scroll_menu">
+					<button id="flyer_prev" class="prev_btn"></button>
+					<div id="flyer_scroll" class="scroll_menu_box">
 						<ul>
 							<li>
 								<img src="./images/flyer/01.jpg" alt="">
@@ -211,7 +211,7 @@
 							</li>
 						</ul>
 					</div>
-					<button id="flyer_next" class="flyer_next"></button>
+					<button id="flyer_next" class="next_btn"></button>
 				</div>
 				<ul class="mod_dots">
 					<li class="on"></li>
@@ -441,9 +441,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="video_menu">
-					<button class="flyer_prev"></button>
-					<div class="video_menu_box">
+				<div id="video_menu" class="scroll_menu _video">
+					<button class="prev_btn"></button>
+					<div id="video_scroll" class="scroll_menu_box ">
 						<ul>
 							<li>
 								<img src="./images/video/video1.png" alt="">
@@ -477,9 +477,13 @@
 								<img src="./images/video/video2.png" alt="">
 								<span></span>
 							</li>
+							<li>
+								<img src="./images/video/video2.png" alt="">
+								<span></span>
+							</li>
 						</ul>
 					</div>
-					<button class="flyer_next"></button>
+					<button class="next_btn"></button>
 				</div>
 			</div>
 		</div>
