--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 					曙光
 				</a>
 			</h1>
-			<div class="menu_btn" :class="{active : menuActive}" @click="menuHandler">
-			</div>
-			<div class="menu ">
+			<div id="menu_btn" class="menu_btn"></div>
+			<div class="menu">
 				<ul>
 					<li>最新課程</li>
 					<li>曙光金榜</li>
@@ -261,20 +260,19 @@
 				分校介紹
 			</div>
 			<div class="info_box">
-				<div class="school_name">
-					<ul id="school_first_menu" class="school_first_menu">
+				<div class="school_menu">
+					<ul id="school_menu_first" class="school_menu_first">
 						<li>
-							<span>曙光・居仁校</span>
-							<ul class="school_second_menu">
+							<span  class="active">曙光・居仁校</span>
+							<ul id="school_menu_second" class="school_menu_second">
 								<li>
-									<span>升大學中心</span>
-									<ul class="school_third_menu">
-										<li>
-											<h1>曙光・居仁校</h1>
-											<h2>國小部</h2>
-										</li>
+									<span class="active">升大學中心</span>
+									<ul class="school_menu_third">
 										<li>
 											<img src="./images/school/school1.jpg" alt="">
+										</li>
+										<li>
+											<div class="department" data-dep="升大學中心">曙光・居仁校</div>
 										</li>
 										<li>
 											<div class="school_phone" data-text="電話："><span>04 2229 7799</span></div>
@@ -286,13 +284,12 @@
 								</li>
 								<li>
 									<span>國中部</span>
-									<ul class="school_third_menu">
-										<li>
-											<h1>曙光・居仁校</h1>
-											<h2>國小部</h2>
-										</li>
+									<ul class="school_menu_third">
 										<li>
 											<img src="./images/school/school1.jpg" alt="">
+										</li>
+										<li>
+											<div class="department" data-dep="國中部">曙光・居仁校</div>
 										</li>
 										<li>
 											<div class="school_phone" data-text="電話："><span>04 2229 7799</span></div>
@@ -304,13 +301,12 @@
 								</li>
 								<li>
 									<span>國小部</span>
-									<ul class="school_third_menu">
-										<li>
-											<h1>曙光・居仁校</h1>
-											<h2>國小部</h2>
-										</li>
+									<ul class="school_menu_third">
 										<li>
 											<img src="./images/school/school1.jpg" alt="">
+										</li>
+										<li>
+											<div class="department" data-dep="國小部">曙光・居仁校</div>
 										</li>
 										<li>
 											<div class="school_phone" data-text="電話："><span>04 2229 7799</span></div>
@@ -324,7 +320,7 @@
 						</li>
 						<li>
 							<span>曙光・潭雅校</span>
-							<ul class="school_second_menu">
+							<ul class="school_menu_second">
 								<li>
 									<span>新超群一館</span>
 								</li>
@@ -338,7 +334,7 @@
 						</li>
 						<li>
 							<span>曙光・惠文校</span>
-							<ul class="school_second_menu">
+							<ul class="school_menu_second ">
 								<li>
 									<span>升大學 英檢中心</span>
 								</li>
@@ -442,7 +438,7 @@
 					</div>
 				</div>
 				<div id="video_menu" class="scroll_menu _video">
-					<button class="prev_btn"></button>
+					<button id="video_prev" class="prev_btn"></button>
 					<div id="video_scroll" class="scroll_menu_box ">
 						<ul>
 							<li>
@@ -483,7 +479,7 @@
 							</li>
 						</ul>
 					</div>
-					<button class="next_btn"></button>
+					<button id="video_next" class="next_btn"></button>
 				</div>
 			</div>
 		</div>
@@ -677,92 +673,6 @@
 	</div>
 	<script src="./js/jquery-3.5.1.min.js"></script>
 	<script src='./js/index.js'></script>
-	<script>
-
-		// let vm = new Vue({
-		// 	el: "#app",
-		// 	data: data,
-		// 	mounted() {
-				// $(window).width() 取得螢幕寬度
-				// $(window).height() 取得螢幕高度
-				// offsetWidth 
-				// let item = this.flyer_data;
-				// if (item.flyer_menu.length > 10) {
-				// 	item.flyer_max_move = item.flyer_menu.length % 10
-				// 	item.flyer_scroll = true
-				// 	item.flyer_menu_style.flyer_menu_iscenter = "flex-start";
-				// 	item.flyer_menu_style.flyer_menu_move = "-10";
-				// }
-				// const vm = this;
-				// vm.fullWidth = window.innerWidth;
-				// vm.fullHeight = window.innerHeight;
-				// if ($(window).width() <= 768) {
-				// 	this.changeWidth()
-				// }
-				// window.onresize = () => {
-				// 	vm.fullWidth = window.innerWidth;
-				// 	vm.fullHeight = window.innerHeight;
-					// if(){}
-			// 		if ($(window).width() <= 768) {
-			// 			this.changeWidth()
-			// 		} else {
-			// 			item.flyer_group = "";
-			// 		}
-			// 	};
-			// },
-			// methods: {
-			// 	flyer_next() {
-			// 		this.windowWidth()
-			// 		let item = this.flyer_data;
-			// 		let flyer_move = item.flyer_menu_style.flyer_menu_move
-			// 		if (item.flyer_scroll & item.flyer_move_count < item.flyer_max_move) {
-			// 			console.log(flyer_move);
-			// 			item.flyer_menu_style.flyer_menu_move = flyer_move - 100
-			// 			item.flyer_move_count++
-			// 		}
-			// 	},
-			// 	flyer_prev() {
-			// 		this.windowWidth()
-			// 		let item = this.flyer_data;
-			// 		let flyer_move = item.flyer_menu_style.flyer_menu_move
-			// 		if (item.flyer_scroll & item.flyer_move_count > 0) {
-			// 			console.log(flyer_move);
-			// 			item.flyer_menu_style.flyer_menu_move = flyer_move + 100
-			// 			item.flyer_move_count--
-			// 		}
-			// 	},
-			// 	imgHandler(index) {
-			// 		if (this.flyer_data.flyer_now_pic == index) return
-			// 		this.flyer_data.flyer_menu[this.flyer_data.flyer_now_pic].isActive = false
-			// 		this.flyer_data.flyer_now_pic = index
-			// 		this.flyer_data.flyer_menu[index].isActive = true
-			// 	},
-			// 	menuHandler() {
-					// this.menuActive = !this.menuActive
-		// 		},
-		// 		windowWidth() {
-		// 			let item = this.flyer_data;
-		// 			if ($(window).width() < 1280) {
-		// 				console.log('768');
-		// 				item.flyer_max_move = item.flyer_menu.length % 6
-		// 			} else {
-		// 				console.log('1280');
-		// 				item.flyer_max_move = item.flyer_menu.length % 10
-		// 			}
-		// 		},
-		// 		changeWidth() {
-		// 			let item = this.flyer_data;
-		// 			let move = ($(window).width() / 2) - ($('#flyer_item').width() / 2)
-		// 			item.flyer_group = "transform: translateX(" + move + "px)";
-		// 		},
-		// 		school_first_menu(e){
-		// 			let menus = $('#school_first_menu > li')
-		// 			$(e.target).addClass('aaa')
-		// 		}
-
-		// 	}
-		// })
-	</script>
 </body>
 
 </html>
