--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 <body>
 	<div  class="wrap" >
 		<div class="header">
-			<h1 class="logo">
-				<a href="#">
-					曙光
-				</a>
-			</h1>
+			<h1 class="logo"><a href="#">曙光</a></h1>
 			<div id="menu_btn" class="menu_btn"></div>
 			<div class="menu">
 				<ul>
@@ -44,9 +40,7 @@
 					<p class="p2"><tt>有好的學習態度</tt> <tt class="br_768">才是面對人生致勝的關鍵</tt></p>
 				</div>
 			</div>
-			<div class="banner_scoll">
-				SCOLL
-			</div>
+			<div class="banner_scoll">SCOLL</div>
 
 			<div class="date_block">
 				<ul>
