--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div class="wrap">
+	<div id="wrap" class="wrap">
 		<div class="header">
 			<h1 class="logo"><a href="#">曙光</a></h1>
 			<div id="menu_btn" class="menu_btn"></div>
@@ -161,7 +161,7 @@
 						<ul>
 							<li>
 								<img src="./images/flyer/01.jpg" alt="">
-								<span ></span>
+								<span></span>
 							</li>
 							<li>
 								<img src="./images/flyer/02.jpg" alt="">
@@ -492,7 +492,7 @@
 				最新消息
 			</div>
 			<div class="info_box">
-				<ul class="news_box">
+				<ul id="news_box" class="news_box">
 					<li>
 						<span class="news_date">
 							2020年08月08日
@@ -673,6 +673,23 @@
 		</div>
 
 
+		<div class="alert_mask" id="alert_mask" style="display: none;">
+			<div class="alert">
+				<button class="close"></button>
+				<div class="alert_title">
+					父親節快樂!
+				</div>
+				<div class="alert_content">
+					<div class="msg">
+						<p>寬厚的心，比海深。慈父的愛，溫暖心。</p>
+						<p>祝天下的爸爸，父親節快樂！</p>						
+					</div>
+					<div class="pic">
+						<img src="./images/news/image 8.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="scroll_top"></div>
 	</div>
 	<script src="./js/jquery-3.5.1.min.js"></script>
