--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 <body>
 	<div id="wrap" class="wrap">
 		<div class="header">
-			<h1 class="logo"><a href="#banner">曙光</a></h1>
+			<h1 class="logo" name="banner">曙光</h1>
 			<div id="menu_btn" class="menu_btn"></div>
-			<div class="menu">
+			<div id="menu" class="menu">
 				<ul>
-					<li><a href="#flyer">最新課程</a></li>
-					<li><a href="#leaderboard">曙光金榜</a></li>
-					<li><a href="#school">分校介紹</a></li>
-					<li><a href="#video">影音專區</a></li>
-					<li><a href="#news">最新消息</a></li>
-					<li><a href="#about">關於曙光</a></li>
-					<li><a href="#edu_link">教育單位連結</a></li>
-					<li><a href="#footer">聯絡我們</a></li>
+					<li name="flyer">最新課程</li>
+					<li name="leaderboard">曙光金榜</li>
+					<li name="school">分校介紹</li>
+					<li name="video">影音專區</li>
+					<li name="news">最新消息</li>
+					<li name="about">關於曙光</li>
+					<li name="edu_link">教育單位連結</li>
+					<li name="footer">聯絡我們</li>
 				</ul>
 			</div>
 		</div>
-		<div class="scroll_box">
+		<div id="scroll_box" class="scroll_box">
 			<div id="banner" class="banner">
 				<div class="banner_info">
 					<div class="pic">
@@ -503,13 +503,13 @@
 								<div class="video_title">[ 幹話聊前端 ] 2020-2021 前端回顧與新年展望</div>
 								
 								<div class="video_play" >
-									<iframe width="90%" height="100%" src="https://www.youtube.com/embed/lwqhZUSvdNk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<iframe width="100%" height="100%" src="https://www.youtube.com/embed/lwqhZUSvdNk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</div>
 							</div>
 							<div class="video_item">
 								<div class="video_title">[ 想入門，我陪你 ] Re Vue 重頭說起｜Day 24：模組化與專案結構管理</div>
 								<div class="video_play">
-									<iframe width="90%" height="100%" src="https://www.youtube.com/embed/X1bH3vAej4o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<iframe width="100%" height="100%" src="https://www.youtube.com/embed/X1bH3vAej4o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
