--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 						<p class="p2"><tt>有好的學習態度</tt> <tt class="br_768">才是面對人生致勝的關鍵</tt></p>
 					</div>
 				</div>
-				<div class="banner_scoll">SCOLL</div>
+				<div class="banner_scoll">
+					<span>SCOLL</span>
+					
+				</div>
 
 				<div class="date_block">
 					<ul>
@@ -582,7 +585,6 @@
 					</ul>
 					<ul class="mod_dots">
 						<li class="on"></li>
-						<li></li>
 					</ul>
 				</div>
 			</div>
@@ -742,7 +744,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="scroll_top"></div>
+		<button id="scroll_top" class="scroll_top"></button>
 	</div>
 	<script src="./js/jquery-3.5.1.min.js"></script>
 	<script src='./js/index.js'></script>
