--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 			</div>
 			<div id="footer" class="footer">
 				<div class="info_box">
-					<div class="school_group">
+					<div class="school_group" style="display: none;">
 						<div>
 							<ul>
 								<li>
